--- a/Day_2/HW02_ch07_ex02.ipynb
+++ b/Day_2/HW02_ch07_ex02.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What would you like to evaluate: 2+3\n",
+      "5\n",
+      "What would you like to evaluate: 2,3\n",
+      "(2, 3)\n",
+      "What would you like to evaluate: ahelufef\n",
+      "You screwed something up...\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3\n",
     "# HW04_ch07_ex02\n",
@@ -38,17 +51,18 @@
     "# Body\n",
     "def eval_loop():\n",
     "    s = 'N/A'\n",
-    "    last_expression = 'N/A'\n",
+    "    last_value = 'N/A'\n",
     "    while (s != 'done'):\n",
     "        try:\n",
     "            s = input(\"What would you like to evaluate: \")\n",
     "            if (s == 'done'):\n",
-    "                return last_expression\n",
+    "                return last_value\n",
     "            print(eval(s))\n",
-    "        except NameError:\n",
+    "            last_value = eval(s)\n",
+    "        except (NameError, TypeError, ValueError):\n",
     "            return \"You screwed something up...\"\n",
-    "        finally:\n",
-    "            last_expression = s\n",
+    "#         finally:\n",
+    "#             last_value = eval(s)\n",
     "    \n",
     "    \n",
     "\n",
@@ -65,6 +79,20 @@
     "if __name__ == '__main__':\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
