all HW2 assignments

--- a/Day_4/Day_4_slides.ipynb
+++ b/Day_4/Day_4_slides.ipynb
@@ -26,8 +26,31 @@
     "```bash\n",
     ">>> s = 'hello'\n",
     ">>> type(s[0])\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'type'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'h9llo'\n",
+    "print(type(type(s[0])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lists: initializing\n",
     "initialize:\n",
     "\n",
@@ -44,8 +67,38 @@
     "```bash\n",
     ">>> for item in awesome:\n",
     "...     print(item, type(item))\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "golden bears\n",
+      "nachos\n",
+      "7\n",
+      "17.7\n",
+      "[0, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "awesome = ['golden bears', 'nachos', 7, 17.7]\n",
+    "for index in range(len(awesome)):\n",
+    "    print(awesome[index])\n",
+    "    \n",
+    "print(list(range(len(awesome))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lists: of lists\n",
     "\n",
     "lists in lists:\n",
@@ -54,8 +107,32 @@
     ">>> awesome2 = [['golden bears', 'nachos'], [7, 17.7]]\n",
     "```\n",
     "\n",
-    "how do we get to 'nachos'?\n",
-    "\n",
+    "how do we get to 'nachos'?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nachos\n"
+     ]
+    }
+   ],
+   "source": [
+    "awesome2 = [['golden bears', 'nachos'], [7, 17.7]]\n",
+    "print(awesome2[0][1])\n",
+    "# print(awesome2.index('nachos'))  -> does not work, you need to at least know the structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lists: mutable\n",
     "\n",
     "you can reassign elements in a list using indices\n",
@@ -68,8 +145,13 @@
     "True\n",
     ">>> 'stanford' in awesome\n",
     "False\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lists: `len()`, `+`, `*`\n",
     "\n",
     "```bash\n",
@@ -88,8 +170,57 @@
     ">>> twice_alist = alist * 2\n",
     ">>> print(twice_alist)\n",
     "[3, 4, 5, 3, 4, 5]\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my new list looks like [3, 4, 5, 7, 8, 9] and its length is 6\n",
+      "we can also concaternate two lists like this: [[3, 4, 5], [7, 8, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alist = [3, 4, 5]\n",
+    "blist = [7, 8, 9]\n",
+    "new_list = alist + blist\n",
+    "another_list = [alist, blist]\n",
     "\n",
+    "print('my new list looks like {0} and its length is {1}'.format(new_list, len(new_list)))\n",
+    "print('we can also concaternate two lists like this: {0}'.format(another_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alist = [3, 4, 5]\n",
+    "blist = [7, 8, 9]\n",
+    "new_list != [[3, 4, 5], [6, 7, 8]]\n",
+    "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lists: slicing, looping, and math\n",
     "\n",
     "```bash\n",
@@ -115,8 +246,68 @@
     "- Remove + obtain item at index: `item = list.pop(idx)`\n",
     "- Sort (in-place) ascending order: `list.sort()`\n",
     "- Sort (in-place) descending order: `list.reverse()`\n",
-    "- Sort and return (to obtain): `newlist = sorted(list)`\n",
+    "- Sort and return (to obtain): `newlist = sorted(list)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6]\n",
+      "[3, 4, 6]\n",
+      "[3, 4]\n",
+      "3\n",
+      "[4]\n",
+      "[9, 8, 7]\n",
+      "[7, 8, 9]\n",
+      "['a', 'c', 'b']\n",
+      "['a', 'b', 'c']\n",
+      "['c', 'b', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "alist = [3, 4, 5]\n",
+    "blist = [7, 8, 9]\n",
     "\n",
+    "alist.append(6)\n",
+    "print(alist)\n",
+    "\n",
+    "alist.remove(5)\n",
+    "print(alist)\n",
+    "\n",
+    "alist.pop(2)\n",
+    "print(alist)\n",
+    "\n",
+    "#only pop() allows you to assign an item to track what you have removed\n",
+    "item = alist.pop(0)\n",
+    "print(item)\n",
+    "print(alist)\n",
+    "\n",
+    "blist.reverse()\n",
+    "print(blist)\n",
+    "\n",
+    "blist.sort()\n",
+    "print(blist)\n",
+    "\n",
+    "\n",
+    "clist = ['a', 'c', 'b']\n",
+    "dlist = sorted(clist)\n",
+    "print(clist)\n",
+    "print(dlist)\n",
+    "\n",
+    "print(dlist[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Python.org Tutorial: [5.1 More on Lists](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)\n",
     "\n",
     "# strings to lists & lists to strings\n",
@@ -156,8 +347,62 @@
     ">>> actual_phrase = [?????????????????]\n",
     ">>> print(new_phrase)\n",
     "'She sells seashells by the seashore'\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['She', 'sells', 'seashells', 'by the seashore']\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrase = 'She;sells;seashells;by the seashore'\n",
+    "word_list = phrase.split(';')\n",
+    "print(word_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['She', 'sells', 'seashells', 'by', 'the', 'seashore']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'She sells seashells by the seashore'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phrase = 'She sells seashells by the seashore'\n",
+    "word_list = phrase.split()\n",
+    "print(word_list)\n",
+    "' '.join(word_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lists: `copy`, `deepcopy` and pass by assignment\n",
     "\n",
     "## Python Documentation: [8.10. copy — Shallow and deep copy operations](https://docs.python.org/3/library/copy.html)\n",
@@ -245,13 +490,96 @@
     ">>> x\n",
     "[99, 2, ['bat', 2, 3]]\n",
     ">>> \n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blist now is: [3, 4, 5]\n",
+      "I changed alist to [3, 'hello', 5] and blist now looks like: [3, 'hello', 5] \n",
+      "\n",
+      "location of the alist is 0x10e2338c0\n",
+      "location of the blist is 0x10e2338c0\n",
+      "\n",
+      "\n",
+      "After deep copy, blist now is: [3, 'hello', 5]\n",
+      "I changed alist to [3, 'new thang', 5] and blist now looks like: [3, 'hello', 5] \n",
+      "\n",
+      "location of the alist is 0x10e2338c0\n",
+      "location of the blist is 0x10e0e1d70\n"
+     ]
+    }
+   ],
+   "source": [
+    "alist = [3, 4, 5]\n",
+    "blist = alist #shallow copy\n",
+    "print('blist now is: {0}'.format(blist))\n",
+    "alist[1] = 'hello'\n",
+    "print('I changed alist to {0} and blist now looks like: {1} \\n'.format(alist, blist))\n",
+    "print('location of the alist is {0}'.format(hex(id(alist))))\n",
+    "print('location of the blist is {0}'.format(hex(id(blist))))\n",
+    "print('\\n')\n",
     "\n",
+    "import copy\n",
+    "blist = copy.deepcopy(alist)\n",
+    "print('After deep copy, blist now is: {0}'.format(blist))\n",
+    "alist[1] = 'new thang'\n",
+    "print('I changed alist to {0} and blist now looks like: {1} \\n'.format(alist, blist))\n",
     "\n",
+    "print('location of the alist is {0}'.format(hex(id(alist))))\n",
+    "print('location of the blist is {0}'.format(hex(id(blist))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lists: exercise 1\n",
     "write a function called `chop` that takes a list, modifies it by\n",
-    "removing the first and last elements, and returns `None`\n",
+    "removing the first and last elements, and returns `None`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chop(lst):\n",
+    "    lst.pop(0)\n",
+    "    lst.pop(len(lst) - 1)\n",
+    "    print(lst)\n",
+    "    return None\n",
     "\n",
+    "def main():\n",
+    "    lst1 = [0, 1, 2, 3]\n",
+    "    chop(lst)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# tuples\n",
     "standard sequence data type\n",
     "\n",
@@ -283,8 +611,94 @@
     "- example w/ list variable name\n",
     "- counterexamle w/ string variable name\n",
     "\n",
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "('hi', 'hello')\n",
+      "((1, 2, 3, (4, 5), [0, 0, 0]), 2)\n",
+      "<class 'tuple'>\n",
+      "(1, 2, 3, (4, 5), [0, 0, 0])\n",
+      "\n",
+      "\n",
+      "can create tuple dynamically too\n",
+      "give me a number: hello\n",
+      "give me a number: boo\n",
+      "('hello', 'boo')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cannot sort a tuple \n",
+    "# you use tuple for its limits and restriction \n",
     "\n",
+    "\n",
+    "t = 1, 2, 3\n",
+    "print(t)\n",
+    "a, b, c = t\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "t = 'hi', 'hello'\n",
+    "print(t)\n",
+    "type(t)\n",
+    "t = 1\n",
+    "type(t)\n",
+    "\n",
+    "\n",
+    "t = ((1, 2, 3, (4, 5), [0, 0, 0]), 2)\n",
+    "print(t)\n",
+    "a, b= t\n",
+    "print(type(a))\n",
+    "print(a)\n",
+    "print('\\n')\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('can create tuple dynamically too')\n",
+    "t = (input('give me a number: '), input('give me a number: '))\n",
+    "print(t)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('hello', 1, 2)\n",
+      "('hello', 1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'hello'\n",
+    "t = a, 1, 2\n",
+    "print(t)\n",
+    "#when you assign a to diff value afterwards, tuple doesn't change the value\n",
+    "a = 'bye'\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### tuples & immutability examples:\n",
     "\n",
     "```bash\n",
@@ -348,9 +762,13 @@
     ">>> big_tuple = (213412341234,123412341234,1234123241234,12341234,\n",
     "... 12341234,12341234)\n",
     ">>> \n",
-    "```\n",
-    "\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lists: exercise 2\n",
     "write a function that reads `roster.txt` and prints the following:\n",
     "\n",
@@ -361,8 +779,79 @@
     "[[First, User], [First, User], [First, User], etc.]\n",
     "\"A list of first names sorted by length:\"\n",
     "[ShortFirst, LongFirst, LongerFirst, etc.]\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*First list\n",
+      "['Prakhar prakharchandna', 'Tiffany nameistiffyp', 'Mandy mleung32', 'Akshara akshara08', 'Nicole nicoletchi', 'Manasi manasi1994', 'Ramya Ramya0694', 'Max maxmir20', 'Brinda brinsga', 'Yin qyinhelena', 'Min Hyung chung-grace', 'Arika ArikaVerma', 'Esther estherjan', 'Nitin NiStannum']\n",
+      "\n",
+      "*Second list\n",
+      "[['Prakhar', 'prakharchandna'], ['Tiffany', 'nameistiffyp'], ['Mandy', 'mleung32'], ['Akshara', 'akshara08'], ['Nicole', 'nicoletchi'], ['Manasi', 'manasi1994'], ['Ramya', 'Ramya0694'], ['Max', 'maxmir20'], ['Brinda', 'brinsga'], ['Yin', 'qyinhelena'], ['Min Hyung', 'chung-grace'], ['Arika', 'ArikaVerma'], ['Esther', 'estherjan'], ['Nitin', 'NiStannum']]\n",
+      "\n",
+      "*Third list\n",
+      "['Max', 'Yin', 'Mandy', 'Ramya', 'Arika', 'Nitin', 'Nicole', 'Manasi', 'Brinda', 'Esther', 'Prakhar', 'Tiffany', 'Akshara', 'Min Hyung']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "file_handle = open('roster.txt', 'r')\n",
+    "lst_first = []\n",
+    "lst_second = []\n",
+    "lst_third = []\n",
     "\n",
+    "print('*First list')\n",
+    "for row in file_handle:\n",
+    "    lst_first.append(row.split('\\n')[0])\n",
+    "lst_first.pop(len(lst_first)-1)\n",
+    "print(lst_first)\n",
+    "\n",
+    "print('\\n*Second list')\n",
+    "for i in lst_first:\n",
+    "    lst_second.append(i.split())\n",
+    "\n",
+    "for j in lst_second:\n",
+    "    if len(j) > 2:\n",
+    "        k = j[0:len(j) - 1]\n",
+    "        name = ' '.join(k)\n",
+    "        j[0] = name\n",
+    "        j.pop(1)\n",
+    "print(lst_second)\n",
+    "\n",
+    "print('\\n*Third list')\n",
+    "for i in lst_second: \n",
+    "    lst_third.append(i[0])\n",
+    "lst_third = sorted(lst_third, key = len)\n",
+    "print(lst_third)\n",
+    "            \n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1, 2]\n",
+    "print(len(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# lab - first\n",
     "Please fix HW first:\n",
     "\n",
@@ -426,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
